--- a/src/components/navbar/Navbar.scss
+++ b/src/components/navbar/Navbar.scss
@@ -53,7 +53,7 @@ nav {
   gap: 1rem;
 }
 
-@media  (max-width: 600px) {
+@media only screen and (max-width: 600px) {
   #ulBurg {
     display: none;
     flex-direction: column !important;
