--- a/src/components/hero/Hero.scss
+++ b/src/components/hero/Hero.scss
@@ -76,6 +76,13 @@
 
 @media (max-width: 640px) {
   .hero{
+    &::before {
+    content: '';
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background: rgba(133, 132, 132, 0.578);
+  }
     .text{
       font-size: 7px !important;
     }
