--- a/src/components/customers/Customers.scss
+++ b/src/components/customers/Customers.scss
@@ -114,3 +114,35 @@
 
 
 
+
+
+@media (max-width: 640px) {
+  .cust{
+    padding-top: max(0cm, 7cm); //fix so it only gives 7cm only on smaller phones
+    
+    h1{
+        padding-inline: 20px;
+    }
+    .en::before {
+        content: '';
+        position: absolute;
+        width: 250px;
+        height: 3px;
+        background: linear-gradient(90deg, var(--main-color), var(--main-color-2));
+        margin-top: 2.3cm;
+        transform-origin: left;
+
+    }
+
+    .ar::after {
+        content: '';
+        position: absolute;
+        width: 120px;
+        height: 3px;
+        background: linear-gradient(90deg, var(--main-color), var(--main-color-2));
+        margin-top: 1cm;
+        transform-origin: right;
+        margin-left: -120px;
+    }
+  }
+}
