--- a/src/components/gallery/Gallery.scss
+++ b/src/components/gallery/Gallery.scss
@@ -1,6 +1,6 @@
 .gal {
     margin-top: 3cm;
-    padding: 100px;
+    padding: max(100px);
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -78,7 +78,7 @@
 
         .no3 {
             animation-delay: calc(15s / 8 * (8 - 3) * -1);
-        }        
+        }
 
         .no4 {
             animation-delay: calc(15s / 8 * (8 - 4) * -1);
@@ -116,15 +116,23 @@
 
 
 
-@media  (max-width: 600px) {
-  .gal{
-    .gal-con{
-        gap: 2px !important;
-        margin-top: -2cm;
-        .gal-item{
-            width: 20%;
-            padding-inline: 0 !important;
+@media (max-width: 600px) {
+    .gal {
+        padding: 20px !important;
+        h1 {
+            &::before {
+                content: '';
+                top: 2.3cm;
+            }
+
+        }
+
+        .gal-con {
+            display: flex !important;
+            .gal-item {
+                width: 100% !important;
+                padding-inline: 4cm !important;
+            }
         }
     }
-  }
 }
