--- a/src/components/hero/Hero.scss
+++ b/src/components/hero/Hero.scss
@@ -84,7 +84,8 @@
     background: rgba(133, 132, 132, 0.578);
   }
     .text{
-      font-size: 7px !important;
+      font-size: xx-small !important;
+      margin-top: -2cm;
     }
   }
 }
