--- a/src/components/gallery/Gallery.scss
+++ b/src/components/gallery/Gallery.scss
@@ -121,7 +121,6 @@
         padding: 20px !important;
         padding-bottom: 50px !important;
         h1 {
-            display: none;
             &::before {
                 content: '';
                 top: 2.3cm;
@@ -134,6 +133,7 @@
             overflow-x: auto;
             flex-wrap: nowrap;
             gap: 5px !important;
+            margin-top: 40px;
 
             .gal-item {
                 position: relative !important;
